@@ -35,3 +35,11 @@ replay_gain_tuple_scale(const struct replay_gain_tuple *tuple, float preamp)
 
 	return scale;
 }
+
+void
+replay_gain_info_complete(struct replay_gain_info *info)
+{
+	if (!replay_gain_tuple_defined(&info->tuples[REPLAY_GAIN_ALBUM]))
+		info->tuples[REPLAY_GAIN_ALBUM] =
+			info->tuples[REPLAY_GAIN_TRACK];
+}
